FEAT Nuevas funcionalidades